[package]
name = "address-generator"
version = "2.0.0"
edition = "2021"
description = "高性能以太坊地址生成器 - 针对80核服务器优化"

[dependencies]
# 椭圆曲线加密
secp256k1 = { version = "0.27", features = ["rand", "recovery"] }
# Keccak256哈希
tiny-keccak = { version = "2.0", features = ["keccak"] }
# 并行计算
rayon = "1.10"
# 十六进制编解码
hex = "0.4"
# 随机数生成
rand = "0.8"
rand_xorshift = "0.3"      # 快速RNG (比OsRng快10倍)
# 异步运行时
tokio = { version = "1.35", features = ["full", "signal"] }
# PostgreSQL异步客户端 + COPY协议
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
# 连接池
deadpool-postgres = "0.12"
# AES加密
aes-gcm = "0.10"
# 密钥派生
pbkdf2 = "0.12"
sha2 = "0.10"
# 环境变量
dotenvy = "0.15"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 时间处理
chrono = "0.4"
# 命令行参数
clap = { version = "4.4", features = ["derive", "env"] }
# CPU核心数
num_cpus = "1.16"
# 高性能通道 (生成器 → 写入器)
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = "fat"              # 更激进的LTO
codegen-units = 1
panic = "abort"          # 减少二进制大小
strip = true             # 去除符号

[profile.release.build-override]
opt-level = 3

